--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
         "psr-4": {
-            "AppBundle\\": "src/AppBundle"
+            "AppBundle\\": "src/AppBundle",
+            "Acme\\BlogBundle\\": "src/Acme/BlogBundle",
+            "Acme\\TestBundle\\": "src/Acme/TestBundle"
         },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
