--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "psr-4": {
             "AppBundle\\": "src/AppBundle",
             "Acme\\BlogBundle\\": "src/Acme/BlogBundle",
-            "Acme\\TestBundle\\": "src/Acme/TestBundle"
+            "Acme\\TestBundle\\": "src/Acme/TestBundle",
+            "Acme\\EcommerceBundle\\": "src/Acme/EcommerceBundle",
+            "Utilisateur\\UtilisateurBundle\\": "src/Utilisateur/UtilisateurBundle"
         },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
@@ -17,10 +19,13 @@
     "require": {
         "php": ">=5.3.9",
         "doctrine/doctrine-bundle": "~1.4",
+        "doctrine/doctrine-fixtures-bundle": "^2.0",
         "doctrine/orm": "^2.4.8",
+        "friendsofsymfony/user-bundle": "^2.1",
         "incenteev/composer-parameter-handler": "~2.0",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/monolog-bundle": "^3.0.2",
         "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
         "symfony/symfony": "2.8.*",
