--- a/src/Acme/EcommerceBundle/Resources/config/services.yml
+++ b/src/Acme/EcommerceBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    acme_test.example:
-#        class: Acme\TestBundle\Example
+#    acme_ecommerce.example:
+#        class: Acme\EcommerceBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
